# lmetl

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/etl/: pipeline.md
.claude/rules/llm/: provider.md
.claude/rules/project/: directory-convention.md  overview.md  tooling.md
configs/: base.yaml  dig_info_geology.yaml
configs/genres/: geology.yaml
docs/plans/llm/: genre-config-split.md  yaml-config-migration.md
docs/plans/project/: architecture-questions.md
docs/references/llm/: e2e-test-report.md  usage-guide.md  yaml-config-guide.md
docs/references/project/: pwetl-analysis.md
src/lmetl/: __init__.py
src/lmetl/chunking/: docx_chunker.py
src/lmetl/llm/: client.py  prompts.py
src/lmetl/schemas/: core.py  metadata.py
src/lmetl/schemas/genres/: geology.py
src/lmetl/sinks/: json_sink.py  txt_fallback_sink.py
src/lmetl/sources/: docx_source.py
src/lmetl/tools/: run_extraction.py  sync_schemas.py
src/lmetl/transforms/: llm_transform.py
src/lmetl/utils/: config.py  json_parser.py  schema_loader.py
tests/: conftest.py  test_chunking.py  test_docx_source.py  test_e2e.py  test_llm_client.py  test_llm_transform.py  test_schema_loader.py  test_sync_schemas.py
